--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,14 @@ ol {
   margin: 0;
 }
 
+img {
+  width: 100%;
+}
+
+figure {
+  margin: 0;
+}
+
 
 /* --------------- Mobile Layout ---------------*/
 
@@ -164,6 +172,14 @@ header .content-wrapper {
   flex-flow: row wrap;
   width: 100%;
   margin: 0;
+}
+
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 header .header-divider {
@@ -206,11 +222,10 @@ header nav ul li a {
 }
 
 .hero-area {
-  background: url(../img/header-bkgd.png);
+  background: url(../img/header-bkgd.png) center no-repeat #333;
   background-size: cover;
-  background-position: center;
-  height: 500px;
-
+  width: 100%;
+  height: 100%;
 }
 
 /* ----- Mobile Home Aside -----*/
@@ -268,10 +283,8 @@ input[type=button] {
 }
 
 .features {
-  background: url(../img/main-bkgd.png);
+  background: url(../img/main-bkgd.png) center no-repeat #333;
   background-size: cover;
-  background-position: center;
-  height: 1450px;
   padding: 40px 20px;
 }
 
@@ -284,12 +297,20 @@ input[type=button] {
   text-align: center;
 }
 
-.features-items { 
+.features-items {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
   padding: 50px 0 25px 0;
+}
+
+.features-items figure {
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 /* ----- Mobile Home Reviews Section -----*/
@@ -301,6 +322,14 @@ input[type=button] {
   flex-flow: row wrap;
   padding: 40px 20px;
   background: #2a423a;
+}
+
+.reviews figure {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 .reviews h2 {
@@ -614,19 +643,24 @@ footer h3 {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     padding: 90px 50px;
+  }
+
+  .reviews article {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-flow: row nowrap;
+    width: 100%;
   }
 
   .reviews h2 {
     width: 100%;
   }
 
-  .review-img {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-flow: row wrap;
+  .reviews figure {
+    width: 45%;
   }
 
   .review-text {
@@ -634,11 +668,12 @@ footer h3 {
     justify-content: flex-start;
     align-items: flex-start;
     flex-flow: row wrap;
-    width: 48%;
+    width: 50%;
   }
 
   .review-text h3 {
-    width: 100%;
+    width: 80%;
+    padding: 0;
   }
 
   /*----- Table Home Footer -----*/
@@ -804,7 +839,11 @@ footer h3 {
   }
 
   .features article {
-    width: 15%;
+    width: 20%;
+  }
+
+  .features-items figure {
+    width: 50%;
   }
 
 /*----- Desktop Home Reviews Section -----*/
