--- a/css/main.css
+++ b/css/main.css
@@ -377,16 +377,12 @@ footer h3 {
   width: 100%;
 }
 
-.social ul {
+.social-icons {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.social ul li {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-flow: row nowrap;
+  font-size: 1.5em;
 }
 
 .copyright p {
@@ -691,6 +687,9 @@ footer h3 {
     width: 100%;
   }
 
+  .footer-content h3 {
+    padding-bottom: 40px;
+  }
   .footer-contact {
     padding-bottom: 100px;
     width: 40%;
